# ong_gesfincas

./: pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
liquidaciones/: conciliation_gui.py  conciliation_model.py  conciliation_pandastable.py  final_check.py  liquidaciones.py  liquidaciones_cmd.py  liquidaciones_gui.py  openpyxl_helpers.py
ong_gesfincas/: __init__.py  conciliation_model.py  liquidaciones_cmd.py
src/ong_gesfincas/: __init__.py  conciliation_gui.py  conciliation_model.py  conciliation_pandastable.py  liquidaciones_cmd.py  liquidaciones_gui.py  post_install.py
tests/: generate_test_files.py  test_conciliation_model.py  test_console_scripts.py  test_liquidaciones_cmd.py
