[project]
name = "ong_gesfincas"
version = "0.3.0"
# license = {file = "LICENSE.txt"}
authors = [
    { email = "oneirag@yahoo.es", name = "Oscar Neira" }
]
readme = "readme.md"
requires-python = ">=3.8"
description = "Herramienta gráfica para puntear datos del banco contra ficheros de gesfincas"

dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    # Pandastable is still not updated in pypi, so using git repo that includes my PR
    # "pandastable",
    "pandastable @ git+https://github.com/dmnfarrell/pandastable.git", # Accepted changes, so using main repo
    # Post install script won't be needed in this case
    # "ong_utils @ git+https://github.com/Oneirag/ong_utils@feature/shortcuts"
]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
# Add Excel files in data folder
"ong_gesfincas.data" = ["*.xlsx"]
"ong_gesfincas.icons" = ["*.png", "*.icns"]

[project.urls]  # Optional
"Homepage" = "https://github.com/Oneirag/ong_gesfincas"
"Source" = "https://github.com/Oneirag/ong_gesfincas"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "ong_utils @ git+https://github.com/Oneirag/ong_utils"
]

build-backend = "setuptools.build_meta"

[project.scripts]
# Not needed anymore
# liquidaciones = "ong_gesfincas.liquidaciones_gui:main"
punteo = "ong_gesfincas.conciliation_gui:main"
