[metadata]
name = ong_gesfincas
description = Interfaz para puntear datos de contabilidad de gesfincas contra extractos bancarios
long_description =
    Macro para procesar ficheros de gesfincas (fusionando los datos de varias fincas que vienen en hojas
    separadas en dos hojas, una para ingresos y otra para gastos) y otra macro que crea una ventana con
    la que puntear los datos del banco contra los datos anteriores

author = Oscar Neira
author_email = oneirag@yahoo.es
url = https://www.neirapinuela.es
license =
platforms = any
version  = 0.2.0
project_urls =
    Source =  https://github.com/oneirag/ong_gesfincas

[options]
packages = liquidaciones
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = file: requirements.txt
cmdclass =
    install = setup.PostInstall
    install_egg_info = setup.PostInstallEggInfo
    install_lib = setup.PostInstallLib


[options.package_data]
* = icons/*

[options.entry_points]
console_scripts =
   liquidaciones = liquidaciones.liquidaciones_gui:main
   punteo = liquidaciones.conciliation_gui:main


